fix(): add failing tests